--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal Page</title>
+    <title>The Data Joy</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -13,12 +13,7 @@
             color: #333;
             line-height: 1.6;
         }
-        .container {
-            width: 90%;
-            max-width: 800px;
-            margin: auto;
-            padding: 20px;
-        }
+
         header {
             background-color: #FF5722;
             color: white;
@@ -58,12 +53,19 @@
             color: white;
         }
 
+        .container {
+            width: 90%;
+            max-width: 1000px;
+            margin: 20px auto;
+            padding: 80px 20px 20px 20px; /* Adjusted for the fixed header */
+        }
+
         img {
-            width: 150px;
-            height: 150px;
+            width: 240px;
+            height: 240px;
             border-radius: 50%;
             display: block;
-            margin: 100px auto 10px auto;
+            margin: 10px auto 10px auto;
         }
 
         .intro {
@@ -129,6 +131,7 @@
             <a href="talks/talks.html">Talks</a>
         </nav>
     </header>
+
     <div class="container">
         <img src="images/me.png" alt="My Photo">
         <div class="intro">
