--- a/book/book.html
+++ b/book/book.html
@@ -74,7 +74,7 @@
         .container {
             width: 90%;
             max-width: 1000px;
-            margin: auto;
+            margin: 20px auto;
             padding: 80px 20px 20px 20px;
         }
 
@@ -136,6 +136,7 @@
             border-radius: 5px;
             font-weight: bold;
             font-size: 20px;
+            cursor: pointer;
         }
 
         .cta-button.learn-more {
@@ -151,6 +152,7 @@
             background: white;
             border-radius: 15px;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+            scroll-margin-top: 80px; /* Adjust this value based on your header height */
         }
 
         .section h2 {
