--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         .section {
             width: 100%;
             margin: 40px auto;
+            box-sizing: border-box; 
             padding: 20px;
             background: white;
             border-radius: 15px;
@@ -93,7 +94,6 @@
         }
 
         .section h2 {
-             /*color: #FF5722;*/
             font-size: 26px;
             font-weight: bold;
         }
