--- a/rants/rants.html
+++ b/rants/rants.html
@@ -337,6 +337,49 @@
                 <div class="rant-header">
                     <img src="../images/me.png" alt="Andrea Gioia" class="rant-image">
                     <div class="rant-title-date">
+                        <div class="rant-date">Jan 11, 2025</div>
+                        <div class="rant-title">🤔 Is AI about to KILL the CONSULTING stars?</div>
+                    </div>
+                    <a href="https://www.linkedin.com/posts/andreagioia_thedatajoy-activity-7283834166956208128-nvEk"
+                        class="comment-button">Join the discussion on LinkedIn</a>
+                </div>
+                <div class="rant-content">
+                    <p>🔮 It’s difficult to predict, but in my view, consulting won’t disappear—at least not in the
+                        medium term. However, the role of consultants will evolve. Rather than delivering prepackaged
+                        solutions, their focus will shift toward creating the right environment for making the best
+                        decisions, supported increasingly by generative AI and intelligent agents.</p>
+
+                    <p>⁉️ A consultant’s value will lie more in their ability to ask the right questions than in simply
+                        providing answers. They must embrace maieutics as a key approach to gaining a deeper
+                        understanding of contexts, identifying problems and priorities, and guiding teams toward shared
+                        solutions.</p>
+
+                    <p>😉 We should prepare for the <b>Consultant Augmented Generation (CAG)</b> era.</p>
+                </div>
+
+                <div class="rant-tags">
+                    <span class="rant-tag">Artificial Intelligence</span>
+                </div>
+
+                <div class="rant-media">
+                    <img src="https://github.com/andrea-gioia/TheDataJoy/raw/main/images/2025/2025-P002-modular-data-solution.png"
+                        alt="Modular vs Monolithic Data Solution Illustration">
+                </div>
+                <div class="rant-resources">
+                    <div class="resource-header">
+                        <h4>💡 Related Resources (0)</h4>
+                        <span class="toggle-icon">➕</span>
+                    </div>
+                    
+                </div>
+            </div>
+
+
+
+            <div class="rant">
+                <div class="rant-header">
+                    <img src="../images/me.png" alt="Andrea Gioia" class="rant-image">
+                    <div class="rant-title-date">
                         <div class="rant-date">Jan 8, 2025</div>
                         <div class="rant-title">🏃‍♂️‍➡️ Escaping the Data Management Catch-22 🏃‍➡️</div>
                     </div>
@@ -377,7 +420,7 @@
                     <span class="rant-tag">Data Products</span>
                     <span class="rant-tag">System Thinking</span>
 
-                    
+
                 </div>
 
                 <div class="rant-media">
